--- a/Java/app/src/main/res/values/strings.xml
+++ b/Java/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btn_salvar">SALVAR</string>
     <string name="btn_limpar">LIMPAR</string>
     <string name="btn_finalizar">FINALIZAR</string>
+    <string name="txt_view">Selecione o Curso Desejado...</string>
 </resources>
