--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
 
     <!-- Opções do Menu Lateral Drawer -->
     <string name="listar_clientes_fragment">Lista de Clientes</string>
-    <string name="lista_de_clientes">Lista de Clientes</string>
+    <string name="listar_de_clientes_main">Listar de Clientes</string>
 
 
-    <string name="adicionar_cliente">Adicionar Cliente</string>
+    <string name="adicionar_cliente_main">Adicionar Cliente</string>
     <string name="titulo_cliente">Cliente</string>
     <string name="novo_cliente">Adicionar Novo Cliente</string>
 
