--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="adicionar_cliente_main">Adicionar Cliente</string>
     <string name="titulo_cliente">Cliente</string>
     <string name="novo_cliente">Adicionar Novo Cliente</string>
+    <string name="adicionar_cliente_cards">Adicionar Cliente (CARDS)</string>
 
     <string name="fragmento_preto">Fragmento Preto</string>
     <string name="titulo_preto">Preto</string>
@@ -30,5 +31,7 @@
 
     <!-- Opções do Menu Principal -->
     <string name="meu_perfil">Meu Perfil</string>
+    <string name="txtPerfilContato">Perfil e Contato</string>
+    <string name="txtEndereco">Endereço</string>
 
 </resources>
