criando os métodos para o app part 1

--- a/Kotlin/AppGeoLocalizacao/app/src/main/res/values/strings.xml
+++ b/Kotlin/AppGeoLocalizacao/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">AppGeoLocalizacao</string>
 
     <!-- Atributos do layouyt -->
-    <string name="txt_coordenadas_gps_java">Coordenadas GPS(Java)</string>
+    <string name="txt_coordenadas_gps_kotlin">Coordenadas GPS(Kotlin)</string>
     <string name="txt_latitude">Latitude</string>
     <string name="txt_longitude">Longitude</string>
     <string name="txt_valor_latitude_longitude">0.00</string>
