ajustes no layout

--- a/Java/AppListaDeCompras/app/src/main/res/values/strings.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/values/strings.xml
@@ -3,8 +3,13 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Cliente</string>
-    <string name="nav_header_subtitle">Profº Marco Maddo</string>
+    <string name="nav_header_subtitle">Nome do cliente</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Sair</string>
-    <string name="modelo_fragment">Fragmento Modelo</string>
+
+    <!-- Valores dos menus -->
+    <string name="txtMeusProdutos">Meus Produtos</string>
+    <string name="txtMinhasCompras">Minhas Compras</string>
+    <string name="txtCompartilhar">Compartilhar</string>
+    <string name="txtSairDoApp">Sair do App</string>
 </resources>
