--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -41,12 +41,12 @@
     <!-- Tela de Login -->
     <string name="txt_btnLogin">LOGIN</string>
     <string name="txtLogin">Login</string>
-    <string name="txt_LoginInformeEmail">Informe Email</string>
+    <string name="txt_RecuperarSenhaTelefone">Informe seu número de telefone</string>
     <string name="txt_InformeSenha">Informe a Senha</string>
     <string name="txtLembrar">Lembrar credenciais</string>
     <string name="txtVerificarDados">* Verifique os dados e tente novamente</string>
     <string name="txtEsqueciSenha">Esqueci a senha</string>
-    <string name="txtExemploEmail">email@email.com.br</string>
+    <string name="txtExemploTelefone">00 00000-00</string>
     <string name="txtSenhaCriptografada">********</string>
     <string name="txtBtnCadastre_se">Cadastre-se</string>
     <string name="txtViewCadastro">Cadastro</string>
@@ -60,6 +60,8 @@
     <string name="txt_recuperar_senha">Recuperar Senha</string>
     <string name="txtVoltar">Voltar</string>
     <string name="txtCancelar">cancelar</string>
+    <string name="txt_LoginInformeEmail">Informe o email</string>
+    <string name="txtExemploEmail">email@email.com.br</string>
 
     <!-- tela de Cadastro -->
 
