--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <!-- Tela de Login -->
     <string name="txt_btnLogin">LOGIN</string>
     <string name="txtLogin">Login</string>
-    <string name="txt_RecuperarSenhaTelefone">Informe seu número de telefone</string>
+    <string name="txt_RecuperarSenhaEmail">Informe seu email</string>
     <string name="txt_InformeSenha">Informe a Senha</string>
     <string name="txtLembrar">Lembrar credenciais</string>
     <string name="txtVerificarDados">* Verifique os dados e tente novamente</string>
