Ajustes na aplicação - appclientes

--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="txtCancelar">cancelar</string>
     <string name="txt_LoginInformeEmail">Informe o email</string>
     <string name="txtExemploEmail">email@email.com.br</string>
+    <string name="listar_menu">Menu</string>
 
     <!-- tela de Cadastro -->
 
