correção no cadastro de usuário

--- a/Java/AppClientes/app/src/main/res/values/strings.xml
+++ b/Java/AppClientes/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="txt_LoginInformeEmail">Informe o email</string>
     <string name="txtExemploEmail">email@email.com.br</string>
     <string name="listar_menu">Menu</string>
+    <string name="edittxt_pesquisar">Pesquisar</string>
 
     <!-- tela de Cadastro -->
 
